...
    }

    return new Scaffold(
      appBar: new AppBar(
        title: Text(_title),
        actions: <Widget>[
          PopupMenuButton<String>(
            onSelected: (String key) {
              switch (key) {
                case 'Load':
                  _loader.loadAd();
                  break;
                case 'Release loader':
...
