...
      body: SafeArea(
        child: ListView(
          children: [
            TextButton(
              onPressed: () =>
                  _interstitial.loadAd(spotId: spotId, apiKey: apiKey),
              child: Text('Load: type 1'),
            ),
            TextButton(
              onPressed: () => _interstitial.showAd(spotId: spotId),
              child: Text('Show type 1'),
            ),
            TextButton(
...
